--- a/MonsterTradingCardGame/MonsterTradingCardGame.csproj
+++ b/MonsterTradingCardGame/MonsterTradingCardGame.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MonsterTradingCardGame.Lib\MonsterTradingCardGame.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
