--- a/MTCG.SERVER/MTCG.Server.csproj
+++ b/MTCG.SERVER/MTCG.Server.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MonsterTradingCardGame.Communication\MTCG.Communication.csproj" />
+    <ProjectReference Include="..\MonsterTradingCardGame.Core\MTCG.Core.csproj" />
+  </ItemGroup>
+
 </Project>
