--- a/MonsterTradingCardGame.Core/MTCG.Core.csproj
+++ b/MonsterTradingCardGame.Core/MTCG.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="5.0.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MonsterTradingCardGame.Lib\MTCG.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
