--- a/MonsterTradingCardGame.Testing/MTCG.Testing.csproj
+++ b/MonsterTradingCardGame.Testing/MTCG.Testing.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.14.7" />
+    <PackageReference Include="Npgsql" Version="5.0.1.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
