--- a/MonsterTradingCardGame.Testing/MTCG.Testing.csproj
+++ b/MonsterTradingCardGame.Testing/MTCG.Testing.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MonsterTradingCardGame.Lib\MTCG.Lib.csproj" />
+    <ProjectReference Include="..\MTCG.SERVER\MTCG.Server.csproj" />
   </ItemGroup>
 
 </Project>
